# mlv-core

./: .gitignore  CMakeLists.txt  README.md
android_patches/: 01_fd_based_file_io.patch  02_dark_frame_fds.patch  03_save_dng_fd.patch  README.md  apply_all.sh
basic_patches/: 01_ librtprocess_cmake_fixes.patch  02_header_fixes.patch
ios_patches/: 01_paths_based_file_io.patch
